compiler/testData/diagnostics/tests/SyntaxErrorInTestHighlightingEof.kt
// RUN_PIPELINE_TILL: FRONTEND
// FIR_IDENTICAL
fun f() {<!SYNTAX!><!>

/* GENERATED_FIR_TAGS: functionDeclaration */
